--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-script:  git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && cmake -DAPI=OGLES $PWD/{} && cmake --build . "
+script: bash -c "cd ~/ && wget https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz  && tar -xf cmake-3.5.2-Linux-x86_64.tar.gz" && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake -DAPI=OGLES $PWD/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake --build . "
 compiler:
   - clang
   - gcc
