--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: cpp
-script: bash -c "cd ~/ && wget  --no-check-certificate https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz  && tar -xf cmake-3.5.2-Linux-x86_64.tar.gz" && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake -DAPI=OGLES $PWD/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake --build . "
+script: 
+  - sudo apt-get update
+  - sudo apt-get install g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - sudo apt-get install libstdc++-4.8-dev
+  - bash -c "cd ~/ && wget  --no-check-certificate https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz  && tar -xf cmake-3.5.2-Linux-x86_64.tar.gz" && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake -DAPI=OGLES $PWD/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake --build . "
 matrix:
   include:
 
