--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 script: 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cp ./Dependencies/Native_SDK/Builds/OSX/x86/Lib/*.dylib ./Dependencies/osx/Bundle/Frameworks/ && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && cmake -DAPI=OGLES $PWD/{} && cmake --build . "; else sudo apt-get update && sudo apt-get install g++-4.8 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90 && sudo apt-get install libstdc++-4.8-dev && bash -c "cd ~/ && wget  --no-check-certificate https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz  && tar -xf cmake-3.5.2-Linux-x86_64.tar.gz" && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake -DAPI=OGLES $PWD/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake --build . "; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cp ./Dependencies/Native_SDK/Builds/OSX/x86/Lib/*.dylib ./Dependencies/osx/Bundle/Frameworks/ && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && cmake -DAPI=OGLES $PWD/{} && cmake --build . "; else sudo apt-get update && sudo apt-get install g++-4.8 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90 && sudo apt-get install libstdc++-4.8-dev && if [[ "$API" == "Vulkan" ]]; then bash -c "cd ~/ && git clone https://github.com/KhronosGroup/glslang.git && cd glslang && cmake . && cmake --build ." ;fi && bash -c "cd ~/ && wget  --no-check-certificate https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz  && tar -xf cmake-3.5.2-Linux-x86_64.tar.gz" && git submodule init &&  git submodule update && find . -maxdepth 1 -type d | grep -v Dependencies | grep -v git | grep -v "^\.$" | grep -v "test" | xargs -L 1 -I{} bash -c "mkdir -p ~/test/{} && cd ~/test/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake -DAPI=$API -DGLSLANG_EXECUTABLE=$GLSLANG_EXECUTABLE $PWD/{} && ~/cmake-3.5.2-Linux-x86_64/bin/./cmake --build . "; fi
 matrix:
   include:
 
@@ -11,6 +11,13 @@ matrix:
         apt:
          sources: ['ubuntu-toolchain-r-test']
          packages: ['g++-4.8']
-      env: COMPILER='ccache g++-4.8'
+      env: API='OGLES' GLSLANG_EXECUTABLE='null'
+    - os: linux
+      compiler: gcc
+      addons: &gcc48
+        apt:
+         sources: ['ubuntu-toolchain-r-test']
+         packages: ['g++-4.8']
+      env: API='Vulkan' GLSLANG_EXECUTABLE='/home/travis/glslang/StandAlone/./glslangValidator'
     - os: osx
       osx_image: xcode7.3
