Initial commit of Intro2Shaders

--- a/Intro2Shaders/CMakeLists.txt
+++ b/Intro2Shaders/CMakeLists.txt
@@ -14,13 +14,28 @@ project(${DEMO_NAME})
 find_package(PVRFramework REQUIRED PATHS "${CMAKE_CURRENT_LIST_DIR}/../Dependencies/Native_SDK/Framework")
 
 # Set our demo source files
-set(SOURCE_FILES ClearAPI.cpp)
+set(SOURCE_FILES Shaders.cpp)
 
 # Include required framework components 
 set(SOURCE_FILES ${SOURCE_FILES} $<TARGET_OBJECTS:PVRShell> $<TARGET_OBJECTS:PVRGlue> $<TARGET_OBJECTS:PVRApi> $<TARGET_OBJECTS:PVRAssets> $<TARGET_OBJECTS:PVRNativeApi> $<TARGET_OBJECTS:PVRCore>)
 
-# Platform specific build and install boilerplate for Windows, Linux, iOS, OSX and Android.
+# Set our shaders - single source shaders will be converted from glsl to Vulkan by setting #define VULKAN and replacing #version 300 es string to #version 450
+set(SINGLE_SOURCE_SHADERS shader.frag shader.vert)
 
+# API specific shaders
+
+# VULKAN_SHADERS are compiled using glslangValidator by the build
+set(VULKAN_SHADERS shader.spirv.frag)
+
+# OPENGLES_SHADERS are copied straight to the target
+set(OPENGLES_SHADERS shader.vsh)
+
+# Assets
+
+# ASSETS are copied straight to the target
+set(ASSETS asset.txt)
+
+# Platform specific build and install boilerplate for Windows, Linux, iOS, OSX and Android.
 platform_specific_build_and_install()
 
-# Link flags are contained in the Helper.cmake file these can be added to by changing ${FRAMEWORK_LINK_LIBS} variable. 
+# Link flags are contained in the Helper.cmake file these can be added to by changing ${FRAMEWORK_LINK_LIBS} variable.
